--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -12,9 +12,14 @@
 // }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Noto+Sans+TC:wght@400;500;700&display=swap');
 
+html {
+  font-size: 16px;
+  height: 100%;
+}
+
 body {
   font-family: 'Noto Sans TC';
-  font-size: 16px;
+  height: 100%;
   // box-sizing: border-box;
 }
 
